--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-kakao-maps-sdk": "^1.1.9",
     "react-router-dom": "^6.14.0"
   }
 }
