--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "react": "^18.2.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0"
   }
