--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "ts-node": "^10.9.1",
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "webpack-pwa-manifest": "^4.3.0",
+    "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
     "dotenv": "^16.3.1",
