--- a/client/package.json
+++ b/client/package.json
@@ -32,7 +32,6 @@
     "typescript": "^5.1.3",
     "webpack": "^5.87.0",
     "webpack-cli": "^5.1.4",
-    "webpack-pwa-manifest": "^4.3.0",
     "workbox-webpack-plugin": "^7.0.0"
   },
   "dependencies": {
@@ -42,6 +41,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.0",
-    "tmap": "^1.0.0"
+    "tmap": "^1.0.0",
+    "webpack-pwa-manifest": "^4.3.0"
   }
 }
